--- a/Avtoteker_FRONTEND/assets/css/style.css
+++ b/Avtoteker_FRONTEND/assets/css/style.css
@@ -1,3 +1,7 @@
+input {
+  outline: none;
+}
+
 * {
   font-family: 'Montserrat', sans-serif;
   padding: 0;
@@ -48,6 +52,7 @@
 }
 
 #header #head .row #NavBar ul {
+  padding: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -56,13 +61,19 @@
 
 #header #head .row #NavBar ul li {
   list-style: none;
-  padding: 0 20px;
   font-size: 1.2em;
 }
 
 #header #head .row #NavBar ul li a {
+  padding: 27px 20px;
   color: #000;
   text-decoration: none;
+}
+
+#header #head .row #NavBar ul li a:hover {
+  background: #ffbb00;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
 #main #main_carusel {
@@ -100,16 +111,56 @@
 
 #main #searchTire .row .col-md-4 .Searchbtn:hover {
   background: #ffbb00;
-  -webkit-transition: background 0.5s;
-  transition: background 0.5s;
+  color: #fff;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
-#main #result {
+#main #searchTire .row .col-md-4 .Searchbtn:focus {
+  background: #ffbb00;
+  color: #000;
+}
+
+#main #result .row {
   background: #dbd9d9;
 }
 
 #main #result .row .col-md-3 img {
   width: 25%;
   color: #ffbb00;
+}
+
+#main #result .row .Drp .btn-group .dropdown-menu input {
+  margin-left: 6%;
+  border-radius: 5px;
+}
+
+#main #result #afterpart div button {
+  border-radius: 10px;
+  font-weight: bold;
+  width: 60%;
+  height: 40px;
+  background: #fff;
+  outline: none;
+}
+
+#main #result #afterpart div button:hover {
+  background: #ffbb00;
+  color: #000;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+
+#main #result #afterpart div a {
+  text-decoration: none;
+  color: #000;
+}
+
+#main #result #afterpart div a:last-child {
+  text-decoration: underline;
+}
+
+#footer {
+  background: #dbd9d9;
 }
 /*# sourceMappingURL=style.css.map */
