--- a/Avtoteker_FRONTEND/assets/css/style.scss
+++ b/Avtoteker_FRONTEND/assets/css/style.scss
@@ -1,6 +1,9 @@
 $main:rgb(255, 187, 0);
 $gray:rgb(219, 217, 217);
 
+input{
+    outline: none;
+}
 
 *{
     font-family: 'Montserrat', sans-serif;
@@ -61,19 +64,33 @@ $gray:rgb(219, 217, 217);
 
             #NavBar{
                 ul{
+                    padding: 0;
                     display: flex;
                     margin:25px 0 0 0;
                     li{
 
                         list-style: none;
                         
-                        padding: 0 20px;
+                        
                         font-size: 1.2em;
+                  
 
                         a{
+                            padding: 27px 20px;
                             color:#000;
                             text-decoration: none;
+
+                            &:hover{
+                                background: $main;
+                                
+                                transition: all 0.5s;
+    
+                            }
+
+                            
                         }
+
+
                     }
                 }
             }
@@ -87,6 +104,7 @@ $gray:rgb(219, 217, 217);
     
     
     #main_carusel{
+        
         display:flex;
         background: $gray;
         
@@ -119,6 +137,7 @@ $gray:rgb(219, 217, 217);
 
             .col-md-4{
                 padding: 1px;
+
                 .Searchbtn{
                     font-weight: bold;
                     width: 100%;
@@ -127,8 +146,16 @@ $gray:rgb(219, 217, 217);
                     outline: none;
                     &:hover{
                         background: $main;
-                        transition: background 0.5s;
+                        color:#fff;
+                        transition: all 0.5s;
+
                     }
+                    
+                    &:focus{
+                        background: $main;
+                        color:#000;
+                    }
+
                 }
             }
 
@@ -137,14 +164,62 @@ $gray:rgb(219, 217, 217);
     }
 
     #result{
-        background: $gray;
+        
         .row{
+            background: $gray;
             .col-md-3{
                 img{
                     width:25%;
                     color: $main;
                 }
             }
+
+            .Drp{
+                .btn-group{
+                    .dropdown-menu{
+                        input{
+                            margin-left:6%;
+                            border-radius: 5px;
+                        }
+                    }
+                }
+            }
+
+            
+        }
+
+        #afterpart{
+            div{
+                button{
+                    border-radius:10px;
+                    font-weight: bold;
+                    width: 60%;
+                    height:40px;
+                    background: #fff;
+                    outline: none;
+                    &:hover{
+                        background: $main;
+                        color:#000;
+                        transition: all 0.5s;
+
+                    }
+                }
+
+                a{
+                    text-decoration: none;
+                    color: #000;
+                    
+                }
+
+                a:last-child{
+
+                    text-decoration: underline;
+                }
+            }
         }
     }
+}
+
+#footer{
+    background: $gray;
 }
