--- a/Avtoteker_FRONTEND/assets/css/style.scss
+++ b/Avtoteker_FRONTEND/assets/css/style.scss
@@ -178,8 +178,9 @@ input{
                 .btn-group{
                     .dropdown-menu{
                         input{
-                            width:80%;
-                            margin-left:10%;
+                            width:70%;
+                            margin-left:15%;
+                            margin-top: 10px;
                             border-radius: 5px;
                         }
                     }
