--- a/Avtoteker_FRONTEND/assets/css/style.css
+++ b/Avtoteker_FRONTEND/assets/css/style.css
@@ -132,8 +132,9 @@ input {
 }
 
 #main #result .row .Drp .btn-group .dropdown-menu input {
-  width: 80%;
-  margin-left: 10%;
+  width: 70%;
+  margin-left: 15%;
+  margin-top: 10px;
   border-radius: 5px;
 }
 
