--- a/Avtoteker_FRONTEND/assets/css/style.scss
+++ b/Avtoteker_FRONTEND/assets/css/style.scss
@@ -176,6 +176,7 @@ input{
 
             .Drp{
                 .btn-group{
+                    width:215px;
                     .dropdown-menu{
                         input{
                             width:70%;
