--- a/Avtoteker_FRONTEND/assets/css/style.css
+++ b/Avtoteker_FRONTEND/assets/css/style.css
@@ -131,6 +131,10 @@ input {
   color: #ffbb00;
 }
 
+#main #result .row .Drp .btn-group {
+  width: 215px !important;
+}
+
 #main #result .row .Drp .btn-group .dropdown-menu input {
   width: 70%;
   margin-left: 15%;
