--- a/Avtoteker_FRONTEND/assets/css/style.scss
+++ b/Avtoteker_FRONTEND/assets/css/style.scss
@@ -176,7 +176,7 @@ input{
 
             .Drp{
                 .btn-group{
-                    width:215px !important;
+                    width:100%;
                     .dropdown-menu{
                         input{
                             width:70%;
