--- a/Avtoteker_FRONTEND/assets/css/style.css
+++ b/Avtoteker_FRONTEND/assets/css/style.css
@@ -43,11 +43,11 @@ input {
   background: #dbd9d9;
 }
 
-#header #head .row #logo {
+#header #head .row .logo {
   padding: 10px;
 }
 
-#header #head .row #logo a img {
+#header #head .row .logo a img {
   width: 50%;
 }
 
@@ -167,11 +167,12 @@ input {
   background: #dbd9d9;
 }
 
-#footer .row #logo1 {
-  padding: 20px;
+#footer .row .logo1 {
+  padding: 10px;
 }
 
-#footer .row #logo1 a img {
+#footer .row .logo1 a img {
+  padding: 10px;
   width: 50%;
 }
 
