--- a/Avtoteker_FRONTEND/assets/css/style.css
+++ b/Avtoteker_FRONTEND/assets/css/style.css
@@ -173,7 +173,7 @@ input {
 
 #footer .row .logo1 a img {
   padding: 10px;
-  width: 50%;
+  width: 50% !important;
 }
 
 #footer #copy #copyright {
