--- a/Avtoteker_FRONTEND/assets/css/style.scss
+++ b/Avtoteker_FRONTEND/assets/css/style.scss
@@ -237,7 +237,7 @@ input{
             a{
                 img{
                     padding: 10px;
-                    width:50% !important;
+                    width:50% ;
                 }
             }
         }
