--- a/Avtoteker_FRONTEND/assets/css/style.scss
+++ b/Avtoteker_FRONTEND/assets/css/style.scss
@@ -56,7 +56,7 @@ input{
 
         .row{
 
-            .logo{
+            .col-md-3{
                 padding: 10px;
                 a{    
                     img{
@@ -232,7 +232,7 @@ input{
     background: $gray;
 
     .row{
-        .logo1{
+        .col-md-3{
             padding: 10px;
             a{
                 img{
