--- a/Avtoteker_FRONTEND/assets/css/style.scss
+++ b/Avtoteker_FRONTEND/assets/css/style.scss
@@ -178,7 +178,7 @@ input{
                 }
             }
 
-            .Drp{
+            .col-md-1{
                 .btn-group{
                     
                     .dropdown-menu{
