--- a/Avtoteker_FRONTEND/assets/css/style.scss
+++ b/Avtoteker_FRONTEND/assets/css/style.scss
@@ -236,7 +236,7 @@ input{
             padding: 10px;
             a{
                 img{
-                    padding: 10px;
+                    // padding: 10px;
                     width:50% ;
                 }
             }
