--- a/Avtoteker_FRONTEND/assets/css/style.scss
+++ b/Avtoteker_FRONTEND/assets/css/style.scss
@@ -179,8 +179,9 @@ input{
             }
 
             .col-md-1{
+                
                 .btn-group{
-                    
+                    width:215px;
                     .dropdown-menu{
                         input{
                             width:70%;
