--- a/Avtoteker_FRONTEND/assets/css/style.scss
+++ b/Avtoteker_FRONTEND/assets/css/style.scss
@@ -181,7 +181,7 @@ input{
             .col-md-1{
                 
                 .btn-group{
-                    width:215px;
+                    width:215px !important;
                     .dropdown-menu{
                         input{
                             width:70%;
