--- a/Avtoteker_FRONTEND/assets/css/style.css
+++ b/Avtoteker_FRONTEND/assets/css/style.css
@@ -179,18 +179,42 @@ input {
   width: 50%;
 }
 
-#footer .row .col-md-3 hr {
-  border: 2px solid #ffbb00;
-  width: 15%;
-}
-
 #footer .row .col-md-3 p {
   font-size: 0.8em;
+}
+
+#footer .row .col-md-3 div a {
+  padding: 10px 5px;
+}
+
+#footer .row .col-md-3 div a i {
+  color: #000;
+  font-size: 2em;
 }
 
 #footer .row .col-md-3 div img {
   width: 50px;
   border-radius: 20px;
+}
+
+#footer .row .col-md-2 input {
+  margin: 3px;
+  padding: 5px;
+  border-radius: 10px;
+}
+
+#footer .row .col-md-2 button {
+  font-weight: bold;
+  width: 100%;
+  height: 40px;
+  background: #ffbb00;
+  outline: none;
+}
+
+#footer .row .col-md-2 button:hover {
+  color: #fff;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
 #footer #copy #copyright {
@@ -199,5 +223,10 @@ input {
 
 #footer #copy #copyright span {
   text-decoration: underline;
+}
+
+.yellow_hr {
+  border: 2px solid #ffbb00;
+  width: 15%;
 }
 /*# sourceMappingURL=style.css.map */
