--- a/Avtoteker_FRONTEND/assets/css/style.scss
+++ b/Avtoteker_FRONTEND/assets/css/style.scss
@@ -242,24 +242,51 @@ input{
                 }
             }
 
-            hr{
-                border:2px solid $main;
-                width: 15%;
-            }
+            
 
             p{
                 font-size:0.8em;
             }
 
             div{
-                img{
-                    width:50px;
+                a{
                     
-                    border-radius: 20px;
+                    padding: 10px 5px;
+                    i{
+                        color: #000;
+                        font-size: 2em;
+                    }
                 }
 
-                img:last-child(){
-                    
+                img{
+                    width:50px;
+                    border-radius: 20px;
+                }
+            }
+        }
+
+        .col-md-2{
+
+
+
+            input{
+                margin:3px;
+                padding: 5px;
+                border-radius: 10px;
+            }
+
+            button{
+                font-weight: bold;
+                width: 100%;
+                height:40px;
+                
+                background: $main;
+                outline: none;
+                &:hover{
+                
+                    color:#fff;
+                    transition: all 0.5s;
+
                 }
             }
         }
@@ -274,4 +301,9 @@ input{
             }
         }
     }
+}
+
+.yellow_hr{
+    border:2px solid $main;
+    width: 15%;
 }
