--- a/Avtoteker_FRONTEND/assets/css/style.scss
+++ b/Avtoteker_FRONTEND/assets/css/style.scss
@@ -197,6 +197,7 @@ input{
         }
 
         #afterpart{
+            border-radius: 0 0 10px 10px;
             div{
                 button{
                     border-radius:10px;
