--- a/Avtoteker_FRONTEND/assets/css/style.css
+++ b/Avtoteker_FRONTEND/assets/css/style.css
@@ -142,6 +142,10 @@ input {
   border-radius: 5px;
 }
 
+#main #result #afterpart {
+  border-radius: 0 0 10px 10px;
+}
+
 #main #result #afterpart div button {
   border-radius: 10px;
   font-weight: bold;
