--- a/Avtoteker_FRONTEND/assets/css/style.css
+++ b/Avtoteker_FRONTEND/assets/css/style.css
@@ -201,6 +201,29 @@ input {
   border-radius: 20px;
 }
 
+#footer .row .col-md-2 #more {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#footer .row .col-md-2 #more ul li {
+  margin: 3px;
+}
+
+#footer .row .col-md-2 #more ul li a {
+  color: #000;
+}
+
+#footer .row .col-md-2 #more ul li a:hover {
+  -webkit-text-decoration-color: #ffbb00;
+          text-decoration-color: #ffbb00;
+}
+
+#footer .row .col-md-2 #more ul:last-child {
+  margin-left: 30px;
+}
+
 #footer .row .col-md-2 input[type=text],
 #footer .row .col-md-2 input[type=email] {
   margin: 3px;
