--- a/Avtoteker_FRONTEND/assets/css/style.scss
+++ b/Avtoteker_FRONTEND/assets/css/style.scss
@@ -268,7 +268,28 @@ input{
 
         .col-md-2{
 
+            #more{
+                display: flex;
+                ul{
+                    li{
+                        margin:3px;
+                        a{
+                            color: #000;
 
+                            &:hover{
+                                text-decoration-color: $main;
+                            }
+                        }
+
+                        
+                    }
+                    
+                }
+
+                ul:last-child{
+                    margin-left:30px;
+                }
+            }
 
             input[type=text],
             input[type=email]{
