--- a/Avtoteker_FRONTEND/assets/css/style.scss
+++ b/Avtoteker_FRONTEND/assets/css/style.scss
@@ -56,7 +56,7 @@ input{
 
     #head{
         background: $gray;
-        display:none;
+        display:none
         .row{
 
             .col-md-3{
