--- a/Avtoteker_FRONTEND/assets/css/style.scss
+++ b/Avtoteker_FRONTEND/assets/css/style.scss
@@ -17,7 +17,7 @@ input{
 }
 
 #header{
-    
+    display:none;
     #Head{
         
         .row{
@@ -56,7 +56,7 @@ input{
 
     #head{
         background: $gray;
-        display:none
+        
         .row{
 
             .col-md-3{
