--- a/Avtoteker_FRONTEND/assets/css/style.css
+++ b/Avtoteker_FRONTEND/assets/css/style.css
@@ -44,37 +44,25 @@ input {
 }
 
 #header #head {
-  background: #dbd9d9;
+  background: #d0d0d4;
 }
 
-#header #head .row .col-md-3 {
-  padding: 10px;
+#header #head .row {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 #header #head .row .col-md-3 a img {
   width: 50%;
 }
 
-#header #head .row #NavBar ul {
-  padding: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin: 25px 0 0 0;
-}
-
-#header #head .row #NavBar ul li {
-  list-style: none;
-  font-size: 1.2em;
-}
-
-#header #head .row #NavBar ul li a {
-  padding: 27px 20px;
+#header #head .row #NavBar a {
+  padding: 27px;
   color: #000;
   text-decoration: none;
 }
 
-#header #head .row #NavBar ul li a:hover {
+#header #head .row #NavBar a:hover {
   background: #ffbb00;
   color: #000;
   -webkit-transition: all 0.5s;
@@ -85,7 +73,7 @@ input {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background: #dbd9d9;
+  background: #d0d0d4;
 }
 
 #main #main_carusel .row .col-md-4 {
@@ -110,7 +98,7 @@ input {
   font-weight: bold;
   width: 100%;
   height: 80px;
-  background: #dbd9d9;
+  background: #d0d0d4;
   outline: none;
 }
 
@@ -131,7 +119,7 @@ input {
 }
 
 #main #result .row {
-  background: #dbd9d9;
+  background: #d0d0d4;
 }
 
 #main #result .row .col-md-3 img {
@@ -181,14 +169,14 @@ input {
 
 #main #Other {
   display: none;
-  background: #dbd9d9;
+  background: #d0d0d4;
   padding: 10px;
   border-radius: 0 0 10px 10px;
   text-align: center;
 }
 
 #footer {
-  background: #dbd9d9;
+  background: #d0d0d4;
 }
 
 #footer .row .col-md-3 {
