--- a/Avtoteker_FRONTEND/assets/css/style.scss
+++ b/Avtoteker_FRONTEND/assets/css/style.scss
@@ -16,331 +16,13 @@ input{
     margin: 0;
 }
 
-#header{
-    
-    #Head{
-        
-        .row{
-            padding:10px;
-            background: $main;
-            
-            #header_contact{
-                font-size: 1.3em;
-                
-                a i,
-                span{            
-                    padding:10px 1px;
-                    color:#000;
-                }
-            }
-
-            #searchbar{
-                
-                input{
-                    margin-top:6px;
-                    border-radius: 100px;
-                    padding-left: 10px;
-                    outline: none;
-                }
-
-                a{
-                    position: relative;
-                    right:30px;
-                    i{
-                        color:#000;
-                    }
-                }
-            }
-        }
-    }
-
-    #head{
-    
-        
-        background: $gray;
-        
-        .row{
-            
-            box-sizing: border-box;
-            .col-md-3{
-                
-                a{    
-                    img{
-                        width:50%;
-                    }
-                }
-            }
-
-
-            #NavBar{
-               
-                
-                a{
-                    
-                    padding:27px;
-                    color:#000;
-                    text-decoration: none;
-
-                    &:hover{
-                        background: $main;
-                        color:#000;
-                        transition: all 0.5s;
-                        
-                    }
-
-                    
-                }
-            }
-        }
-
-    }
-
-}
-
-#main{
-    
-    
-    #main_carusel{
-        
-        display:flex;
-        background: $gray;
-        
-        .row {
-
-
-            .col-md-4{
-                padding: 1px;
-                .carousel{
-                    .carousel-inner{
-                        .carousel-item{
-                            img{
-                                width:33%;
-                                margin:0;
-                            }
-                        }
-                    }
-                }
-            }
-        }
-    }
-
-    #searchTire{
-        .between{
-            background: $main;
-            padding:10px;
-        }
-
-        .row{
-
-            .col-md-4{
-                padding: 1px;
-
-                .Searchbtn{
-                    font-weight: bold;
-                    width: 100%;
-                    height:80px;
-                    background: $gray;
-                    outline: none;
-                    &:hover{
-                        background: $main;
-                        color:#fff;
-                        transition: all 0.5s;
-
-                    }
-                    
-                    &:focus{
-                        background: $main;
-                        color:#000;
-                    }
-
-                }
-            }
-
-         
-        }
-    }
-
-    #result{
-        display: none;
-        .row{
-            background: $gray;
-            .col-md-3{
-                img{
-                    width:25%;
-                    color: $main;
-                }
-            }
-
-            .col-md-1{
-                
-                .btn-group{
-                    width:215px !important;
-                    .dropdown-menu{
-                        input{
-                            width:70%;
-                            margin-left:15%;
-                            margin-top: 10px;
-                            border-radius: 5px;
-                        }
-                    }
-                }
-            }
-
-            
-        }
-
-        #afterpart{
-            border-radius: 0 0 10px 10px;
-            div{
-                button{
-                    border-radius:10px;
-                    font-weight: bold;
-                    width: 60%;
-                    height:40px;
-                    background: #fff;
-                    outline: none;
-                    &:hover{
-                        background: $main;
-                        color:#000;
-                        transition: all 0.5s;
-
-                    }
-                }
-
-                a{
-                    text-decoration: none;
-                    color: #000;
-                    
-                }
-
-                a:last-child{
-
-                    text-decoration: underline;
-                }
-            }
-        }
-    }
-
-    #Other{
-        display: none;
-        background: $gray;
-        padding:10px;
-        border-radius: 0 0 10px 10px;
-        text-align: center; 
-    }
-}
-
-#footer{
-
-    background: $gray;
-
-    .row{
-        .col-md-3{
-            padding: 10px;
-            a{
-                img{
-                    // padding: 10px;
-                    width:50% ;
-                }
-            }
-
-            
-
-            p{
-                font-size:0.8em;
-            }
-
-            div{
-                a{
-                    
-                    padding: 10px 5px;
-                    i{
-                        color: #000;
-                        font-size: 2em;
-                    }
-                }
-
-                img{
-                    width:50px;
-                    border-radius: 20px;
-                }
-            }
-        }
-
-        .col-md-2{
-
-            #more{
-                display: flex;
-                ul{
-                    li{
-                        margin:3px;
-                        
-                        
-                        a{
-                            color: #000;
-
-                           
-
-                            
-                        }
-
-                        
-                    }
-                    
-                }
-
-                ul:last-child{
-                    margin-left:30px;
-                }
-            }
-
-            input[type=text],
-            input[type=email]{
-                margin:3px;
-                padding: 5px;
-                border-radius: 10px;
-            }
-
-            
-
-            
-            span{
-                font-size:0.83em;
-                position: relative;
-                right:1%;
-            }
-
-            button{
-                font-weight: bold;
-                width: 100%;
-                height:40px;
-                
-                background: $main;
-                outline: none;
-                &:hover{
-                
-                    color:#fff;
-                    transition: all 0.5s;
-
-                }
-            }
-        }
-    }
-
-    #copy{
-        border-top:1px solid #fff;
-        background: #313131;
-        #copyright{
-            color:#fff;
-            padding:20px;
-            span{
-                text-decoration: underline;
-            }
-        }
-    }
-}
-
 .yellow_hr{
     border:2px solid $main;
     width: 15%;
 }
+
+@import '_header';
+@import '_main';
+@import '_footer';
+
+@import '_mobile';
