--- a/Avtoteker_FRONTEND/assets/css/_main.scss
+++ b/Avtoteker_FRONTEND/assets/css/_main.scss
@@ -79,7 +79,18 @@
             }
         }
 
+        .btn{
+            color: rgb(98, 97, 97);
+        }
 
+        .search_prop{
+            padding:5px;
+            width:100%;
+            input{
+                border-radius: 5px;
+                
+            }
+        }
 
             
     }
