--- a/Avtoteker_FRONTEND/assets/css/_mobile.scss
+++ b/Avtoteker_FRONTEND/assets/css/_mobile.scss
@@ -65,5 +65,11 @@
 }
 
 @media screen and (max-width:768px){
-    
+    #footer{
+        #more{
+            ul{
+                margin-left:3%;
+            }
+        }
+    }
 }
