--- a/Avtoteker_FRONTEND/assets/css/style.css
+++ b/Avtoteker_FRONTEND/assets/css/style.css
@@ -18,7 +18,6 @@ input {
 }
 
 #header #Head .row {
-  padding: 10px;
   background: #ffbb00;
 }
 
@@ -26,22 +25,20 @@ input {
   font-size: 1.3em;
 }
 
-#header #Head .row #header_contact a i,
-#header #Head .row #header_contact span {
-  padding: 10px 1px;
+#header #Head .row #header_contact .row div a i,
+#header #Head .row #header_contact .row div span {
   color: #000;
 }
 
 #header #Head .row #searchbar input {
-  margin-top: 6px;
   border-radius: 100px;
-  padding-left: 10px;
+  padding-left: 2%;
   outline: none;
 }
 
 #header #Head .row #searchbar a {
   position: relative;
-  right: 30px;
+  bottom: 25px;
 }
 
 #header #Head .row #searchbar a i {
@@ -336,6 +333,12 @@ input {
     width: 100%;
     position: relative;
     right: 1% !important;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  #footer #more ul {
+    margin-left: 3%;
   }
 }
 /*# sourceMappingURL=style.css.map */
