--- a/Avtoteker_FRONTEND/assets/css/_header.scss
+++ b/Avtoteker_FRONTEND/assets/css/_header.scss
@@ -23,7 +23,7 @@
             #searchbar{
                 
                 input{
-                    
+                    height:35px;
                     border-radius: 100px;
                     
                     padding-left:2%;
