--- a/Avtoteker_FRONTEND/assets/css/style.css
+++ b/Avtoteker_FRONTEND/assets/css/style.css
@@ -31,6 +31,7 @@ input {
 }
 
 #header #Head .row #searchbar input {
+  height: 35px;
   border-radius: 100px;
   padding-left: 2%;
   outline: none;
