--- a/Avtoteker_FRONTEND/assets/css/_main.scss
+++ b/Avtoteker_FRONTEND/assets/css/_main.scss
@@ -43,6 +43,8 @@
                     height:80px;
                     background: $gray;
                     outline: none;
+                    padding:1px;
+                    box-sizing: border-box;
                     &:hover{
                         background: $main;
                         color:#fff;
