--- a/Avtoteker_FRONTEND/assets/css/_footer.scss
+++ b/Avtoteker_FRONTEND/assets/css/_footer.scss
@@ -1,9 +1,9 @@
 #footer{
 
     background: $gray;
-
-    .row{
-        .col-md-3{
+    
+    .infi{
+        .about{
             padding: 10px;
             a{
                 img{
@@ -16,6 +16,7 @@
 
             p{
                 font-size:0.8em;
+            
             }
 
             div{
@@ -35,21 +36,21 @@
             }
         }
 
-        .col-md-2{
-
+        
+        .more{
+            width:50%;
             #more{
                 display: flex;
                 ul{
+                    margin-left:5%;
                     li{
-                        margin:3px;
+                        width:150px;
+                        margin-bottom:3px;
                         
                         
                         a{
-                            color: #000;
-
-                           
-
                             
+                            color: #000;                            
                         }
 
                         
@@ -61,37 +62,51 @@
                     margin-left:30px;
                 }
             }
-
-            input[type=text],
-            input[type=email]{
-                margin:3px;
-                padding: 5px;
-                border-radius: 10px;
-            }
-
-            
-            input[type=checkbox]{
-                display: inline-block;
-            }
-            
-            span{
-                font-size:0.83em;
-                display: inline-block;
-                margin-right:1%;
-            }
-
-            button{
-                font-weight: bold;
-                width: 100%;
-                height:40px;
+        }
+        .more1{
+            form{
                 
-                background: $main;
-                outline: none;
-                &:hover{
+                input[type=text],
+                input[type=email]{
+                    margin:3px;
+                    padding: 5px;
+                    border-radius: 10px;
+                    width: 100%;
+                }
                 
-                    color:#fff;
-                    transition: all 0.5s;
+                .checkbox{
+                    display: flex;
+                    input[type=checkbox]{
+                        
+                        float:left;
+                        
+                        
+                    }
+                    
+                    
+                }
 
+                span{
+                        
+                    font-size:0.83em;
+                    margin-left:1% ;
+                    
+                    
+                }
+
+                input[type=submit]{
+                    font-weight: bold;
+                    width: 100%;
+                    height:40px;
+                    
+                    background: $main;
+                    outline: none;
+                    &:hover{
+                    
+                        color:#fff;
+                        transition: all 0.5s;
+
+                    }
                 }
             }
         }
