--- a/Avtoteker_FRONTEND/assets/css/_footer.scss
+++ b/Avtoteker_FRONTEND/assets/css/_footer.scss
@@ -43,6 +43,7 @@
                 display: flex;
                 ul{
                     margin-left:5%;
+                   
                     li{
                         width:130px;
                         margin-bottom:3px;
@@ -58,9 +59,9 @@
                     
                 }
 
-                ul:last-child{
-                    margin-left:30px;
-                }
+                 ul:last-child{
+                    padding-left:10%;
+                 }
             }
         }
         .more1{
