--- a/Avtoteker_FRONTEND/assets/css/_mobile.scss
+++ b/Avtoteker_FRONTEND/assets/css/_mobile.scss
@@ -56,10 +56,12 @@
             right:1% !important;
         }
 
-        
+       
     }
 }
 
 @media screen and (max-width:768px){
-   
+   .more1{
+        margin-top:20px !important;
+   }
 }
