--- a/Avtoteker_FRONTEND/assets/css/style.css
+++ b/Avtoteker_FRONTEND/assets/css/style.css
@@ -359,4 +359,10 @@ input {
     right: 1% !important;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .more1 {
+    margin-top: 20px !important;
+  }
+}
 /*# sourceMappingURL=style.css.map */
