--- a/Avtoteker_FRONTEND/assets/css/_mobile.scss
+++ b/Avtoteker_FRONTEND/assets/css/_mobile.scss
@@ -48,16 +48,16 @@
         }
     }
 
-    #footer{
-        input[type=text],
-        input[type=email]{
-            width:100%;
-            position: relative;
-            right:1% !important;
-        }
+    // #footer{
+    //     input[type=text],
+    //     input[type=email]{
+    //         width:100%;
+    //         position: relative;
+    //         right:1% !important;
+    //     }
 
        
-    }
+    // }
 }
 
 @media screen and (max-width:768px){
