--- a/Avtoteker_FRONTEND/assets/css/_footer.scss
+++ b/Avtoteker_FRONTEND/assets/css/_footer.scss
@@ -5,6 +5,7 @@
     .infi{
         .about{
             padding: 10px;
+            margin-left:3%;
             a{
                 img{
                     // padding: 10px;
